--- a/client/src/app/nouveau-formulaire/nouveau-formulaire.component.html
+++ b/client/src/app/nouveau-formulaire/nouveau-formulaire.component.html
@@ -10,4 +10,5 @@
     <div id="preview">
         <ng-template formhost></ng-template>
     </div>
+    <h1 id="preview-indicator">APERÇU</h1>
 </div>
