[dashB] boutons circulaires et couleur ok

--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -74,9 +74,11 @@
 
 /* ---------------   DÉBUT cartes   -------------- */
 
-#toggleViewButton {
-  background: linear-gradient(#bbdeea, #367ec1);
+.toggleViewDiv {
   float: right;
+}
+.toggleViewButton {
+  background: linear-gradient(#bbdeea, #367ec1);
 }
 
 #card-titleAndType {
