Demande de paiement: Changer la couleur des checkbox #37

--- a/client/src/app/templates/payment-form/paymentForm.component.html
+++ b/client/src/app/templates/payment-form/paymentForm.component.html
@@ -253,7 +253,7 @@
             [(ngModel)]="sig.check"
             [(indeterminate)]="indeterminate"
             [labelPosition]="labelPosition"
-            [disabled]="sig.lock || sig.validated">
+            [disabled]="sig.lock || sig.validated" color="primary">
             <div id="signature-text">
             Je confirme et j'accepte la véracité des informations ci-dessus.
             </div>
