--- a/client/src/app/templates/voyage-form/voyage-form.component.html
+++ b/client/src/app/templates/voyage-form/voyage-form.component.html
@@ -29,17 +29,6 @@
           [(ngModel)]="beneficiaire.nom">
       </mat-form-field>
   </div>
-  <!-- <div id="demandeur" hidden>
-      <h6>DEMANDEUR</h6>
-      <mat-form-field>
-          <input matInput type="text" placeholder="NOM DU DEMANDEUR"
-          [(ngModel)]="demandeur.nom">
-      </mat-form-field>
-      <mat-form-field>
-          <input matInput type="text" placeholder="TÉLÉPHONE"
-          [(ngModel)]="demandeur.telephone">
-      </mat-form-field>
-  </div> -->
 </div>
 
 <div id="fournisseur">
@@ -303,7 +292,7 @@
             [(ngModel)]="sig.check"
             [(indeterminate)]="indeterminate"
             [labelPosition]="labelPosition"
-            [disabled]="sig.lock || sig.validated">
+            [disabled]="sig.lock || sig.validated" color="primary">
             Je confirme et j'accepte la véracité des informations ci-dessus.
             </mat-checkbox>
             <br>
