Rapport de déplacement: Changer la couleur des checkbox #37

--- a/client/src/app/templates/form-deplacement/form-deplacement.component.html
+++ b/client/src/app/templates/form-deplacement/form-deplacement.component.html
@@ -232,7 +232,7 @@
                 [(ngModel)]="sig.check"
                 [(indeterminate)]="indeterminate"
                 [labelPosition]="labelPosition"
-                [disabled]="sig.lock || sig.validated">
+                [disabled]="sig.lock || sig.validated" color="primary">
                 Je confirme et j'accepte la véracité des informations ci-dessus.
                 </mat-checkbox>
                 <br>
