[dashB] #23 fonction naïve de clearSearch
AUSSI déplacement de fonctions (pour lisibilité)

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -55,6 +55,9 @@
     <button mat-icon-button (click)="search()">
       <i class="material-icons" id="searchIcon">search</i>
     </button>
+    <button mat-icon-button (click)="desactivateSearch()">
+      <i class="material-icons" id="clearSearchIcon">backspace</i>
+    </button>
   </div>
 </mat-toolbar>
 
