[dashB] grammaire et re-enlever sticky header

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -347,7 +347,7 @@
       <hr id="a-completer-ligne">
     
       <h4 class="noResult">
-        Aucun formulaire complété, archivé ou annulé
+        Aucun formulaire complété, annulé ou archivé
       </h4>
     </div>
     <!-------------------------------FIN cartes Autres ------------------------------------------->
@@ -696,7 +696,7 @@
       Autres ({{autresCards.length}})
 
       <h4 class="noResult">
-        Aucun formulaire complété, archivé ou annulé
+        Aucun formulaire complété, annulé ou archivé
       </h4>
     </div>
     <!---------------------FIN liste Autres ------------------------->
