--- a/client/src/app/assignation/assignation.component.html
+++ b/client/src/app/assignation/assignation.component.html
@@ -1,5 +1,5 @@
 <div id="asgn-form-container">
-  <div>
+  <div (click)="testParticipants()">
       <div id="metadata" *ngIf="currentForm">
         <img src="assets/img/logo-POLY-forms.png" width=180 height=80>
           <h4>{{currentForm.name | uppercase}}</h4>
