--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -531,7 +531,7 @@
           <ng-container matColumnDef="collaborateurs">
             <th mat-header-cell *matHeaderCellDef> Collaborateurs </th>
             <td mat-cell *matCellDef="let element">
-              <mat-select placeholder={{element.collaborateurs[0].nom}}>
+              <mat-select placeholder={{element.collaborateurs[0].nom}} class="collabSelect">
                 <ng-container *ngFor="let collaborateur of element.collaborateurs">
                   <mat-option [ngSwitch]="collaborateur.acces">
                     <div *ngSwitchCase="'COMPLETED'" class="selectCollaborateurCompleted" >
