--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -518,19 +518,19 @@
       
       <div>
         <h4 class="header-title">Formulaires à compléter ({{aCompleterCards.length}})</h4>
-        <table mat-table [dataSource]="aCompleterCards" id="forms-table">  
+        <table mat-table [dataSource]="aCompleterCards" class="forms-table">  
           <ng-container matColumnDef="idForm">
             <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Identifiant </th>
             <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.idForm}} </td>
           </ng-container>
           <ng-container matColumnDef="auteur">
-            <th mat-header-cell *matHeaderCellDef> Auteur </th>
-            <td mat-cell *matCellDef="let element"> {{element.auteur.nom}} </td>
+            <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Auteur </th>
+            <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.auteur.nom}} </td>
           </ng-container>
       
           <ng-container matColumnDef="collaborateurs">
-            <th mat-header-cell *matHeaderCellDef> Collaborateurs </th>
-            <td mat-cell *matCellDef="let element">
+            <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Collaborateurs </th>
+            <td mat-cell *matCellDef="let element" class="vueListeTd">
               <mat-select placeholder={{element.collaborateurs[0].nom}} class="collabSelect">
                 <ng-container *ngFor="let collaborateur of element.collaborateurs">
                   <mat-option [ngSwitch]="collaborateur.acces">
@@ -556,20 +556,20 @@
           </ng-container>
       
           <ng-container matColumnDef="statut">
-            <th mat-header-cell *matHeaderCellDef> État </th>
-            <td mat-cell *matCellDef="let element"> {{element.statut|state}} </td>
+            <th mat-header-cell *matHeaderCellDef class="vueListeTh"> État </th>
+            <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.statut|state}} </td>
           </ng-container>
           <ng-container matColumnDef="modifieLe">
-            <th mat-header-cell *matHeaderCellDef> Dernière modification </th>
-            <td mat-cell *matCellDef="let element"> {{element.modifieLe|date:'dd/MM/yyyy HH:mm'}} </td>
+            <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Dernière modification </th>
+            <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.modifieLe|date:'dd/MM/yyyy HH:mm'}} </td>
           </ng-container>
           <ng-container matColumnDef="creeLe">
-            <th mat-header-cell *matHeaderCellDef> Date de création </th>
-            <td mat-cell *matCellDef="let element"> {{element.creeLe|date:'dd/MM/yyyy HH:mm'}} </td>
+            <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Date de création </th>
+            <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.creeLe|date:'dd/MM/yyyy HH:mm'}} </td>
           </ng-container>
           <ng-container matColumnDef="modifier">
-              <th mat-header-cell *matHeaderCellDef> Action </th>
-              <td mat-cell *matCellDef="let element">
+              <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Action </th>
+              <td mat-cell *matCellDef="let element" class="vueListeTd">
                   <ng-container [ngSwitch]="determineState(element)">
                       <div *ngSwitchCase="'EDIT'">
                         <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'modify'])">
@@ -615,19 +615,19 @@
     <!---------------------DÉBUT liste Autres ------------------------->
     <div *ngIf="!searchActivated && autresCards.length != 0">
       <h4 class="header-title">Autres formulaires ({{autresCards.length}})</h4>
-      <table mat-table [dataSource]="autresCards" id="forms-table">  
+      <table mat-table [dataSource]="autresCards" class="forms-table">  
         <ng-container matColumnDef="idForm">
-          <th mat-header-cell *matHeaderCellDef> Id </th>
-          <td mat-cell *matCellDef="let element"> {{element.idForm}} </td>
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Identifiant </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.idForm}} </td>
         </ng-container>
         <ng-container matColumnDef="auteur">
-          <th mat-header-cell *matHeaderCellDef> Auteur </th>
-          <td mat-cell *matCellDef="let element"> {{element.auteur.nom}} </td>
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Auteur </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.auteur.nom}} </td>
         </ng-container>
     
         <ng-container matColumnDef="collaborateurs">
-          <th mat-header-cell *matHeaderCellDef> Collaborateurs </th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Collaborateurs </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd">
             <mat-select placeholder={{element.collaborateurs[0].nom}}>
               <ng-container *ngFor="let collaborateur of element.collaborateurs">
                 <mat-option [ngSwitch]="collaborateur.acces">
@@ -653,20 +653,20 @@
         </ng-container>
     
         <ng-container matColumnDef="statut">
-          <th mat-header-cell *matHeaderCellDef> État </th>
-          <td mat-cell *matCellDef="let element"> {{element.statut|state}} </td>
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> État </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.statut|state}} </td>
         </ng-container>
         <ng-container matColumnDef="modifieLe">
-          <th mat-header-cell *matHeaderCellDef> Dernière modification </th>
-          <td mat-cell *matCellDef="let element"> {{element.modifieLe|date:'dd/MM/yyyy HH:mm'}} </td>
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Dernière modification </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.modifieLe|date:'dd/MM/yyyy HH:mm'}} </td>
         </ng-container>
         <ng-container matColumnDef="creeLe">
-          <th mat-header-cell *matHeaderCellDef> Date de création </th>
-          <td mat-cell *matCellDef="let element"> {{element.creeLe|date:'dd/MM/yyyy HH:mm'}} </td>
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Date de création </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.creeLe|date:'dd/MM/yyyy HH:mm'}} </td>
         </ng-container>
         <ng-container matColumnDef="modifier">
-            <th mat-header-cell *matHeaderCellDef> Action </th>
-            <td mat-cell *matCellDef="let element">
+            <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Action </th>
+            <td mat-cell *matCellDef="let element" class="vueListeTd">
                 <ng-container [ngSwitch]="determineState(element)">
                     <div *ngSwitchCase="'EDIT'">
                       <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'modify'])">
@@ -711,19 +711,19 @@
       </div>
       <br><br>
 
-      <table mat-table [dataSource]="displayedCards" id="forms-table">  
+      <table mat-table [dataSource]="displayedCards" class="forms-table">  
         <ng-container matColumnDef="idForm">
-          <th mat-header-cell *matHeaderCellDef> Id </th>
-          <td mat-cell *matCellDef="let element"> {{element.idForm}} </td>
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Identifiant </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.idForm}} </td>
         </ng-container>
         <ng-container matColumnDef="auteur">
-          <th mat-header-cell *matHeaderCellDef> Auteur </th>
-          <td mat-cell *matCellDef="let element"> {{element.auteur.nom}} </td>
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Auteur </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.auteur.nom}} </td>
         </ng-container>
     
         <ng-container matColumnDef="collaborateurs">
-          <th mat-header-cell *matHeaderCellDef> Collaborateurs </th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Collaborateurs </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd">
             <mat-select placeholder={{element.collaborateurs[0].nom}} panelClass="collabSelect">
               <ng-container *ngFor="let collaborateur of element.collaborateurs">
                 <mat-option [ngSwitch]="collaborateur.acces">
@@ -749,20 +749,20 @@
         </ng-container>
     
         <ng-container matColumnDef="statut">
-          <th mat-header-cell *matHeaderCellDef> État </th>
-          <td mat-cell *matCellDef="let element"> {{element.statut|state}} </td>
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> État </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.statut|state}} </td>
         </ng-container>
         <ng-container matColumnDef="modifieLe">
-          <th mat-header-cell *matHeaderCellDef> Dernière modification </th>
-          <td mat-cell *matCellDef="let element"> {{element.modifieLe|date:'dd/MM/yyyy HH:mm'}} </td>
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Dernière modification </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.modifieLe|date:'dd/MM/yyyy HH:mm'}} </td>
         </ng-container>
         <ng-container matColumnDef="creeLe">
-          <th mat-header-cell *matHeaderCellDef> Date de création </th>
-          <td mat-cell *matCellDef="let element"> {{element.creeLe|date:'dd/MM/yyyy HH:mm'}} </td>
+          <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Date de création </th>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.creeLe|date:'dd/MM/yyyy HH:mm'}} </td>
         </ng-container>
         <ng-container matColumnDef="modifier">
-            <th mat-header-cell *matHeaderCellDef> Action </th>
-            <td mat-cell *matCellDef="let element">
+            <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Action </th>
+            <td mat-cell *matCellDef="let element" class="vueListeTd">
                 <ng-container [ngSwitch]="determineState(element)">
                     <div *ngSwitchCase="'EDIT'">
                       <button mat-raised-button id="modifier" (click)="redirectTo(['/edit', element._id, 'modify'])">
