[dashB] recherche doit être active si aucune info de recherche ?

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -496,8 +496,9 @@
         </button>
       </div>
 
+      <br>
       <h4 class="noResult">
-        Aucun résultat trouvé
+        Aucun résultat correspondant
       </h4>
     </div>
     <!-------------------------------FIN cartes recherche------------------------------------------->
@@ -798,7 +799,7 @@
       <br><br>
       
       <h4 class="noResult">
-        Aucun résultat trouvé
+        Aucun résultat correspondant
       </h4>
     </div>
     <!---------------------FIN liste recherche ------------------------->
