--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -556,9 +556,9 @@
           <ng-container matColumnDef="collaborateurs">
             <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Collaborateurs </th>
             <td mat-cell *matCellDef="let element" class="vueListeTd">
-              <mat-select placeholder={{element.collaborateurs[0].nom}} class="collabSelect">
+              <mat-select placeholder={{element.collaborateurs[0].nom}}>
                 <ng-container *ngFor="let collaborateur of element.collaborateurs">
-                  <mat-option [ngSwitch]="collaborateur.acces">
+                  <mat-option [ngSwitch]="collaborateur.acces" class="collabOption">
                     <div *ngSwitchCase="'COMPLETED'" class="selectCollaborateurCompleted" >
                         {{collaborateur.nom}}
                     </div>
@@ -669,7 +669,7 @@
           <td mat-cell *matCellDef="let element" class="vueListeTd">
             <mat-select placeholder={{element.collaborateurs[0].nom}}>
               <ng-container *ngFor="let collaborateur of element.collaborateurs">
-                <mat-option [ngSwitch]="collaborateur.acces">
+                <mat-option [ngSwitch]="collaborateur.acces" class="collabOption">
                   <div *ngSwitchCase="'COMPLETED'" class="selectCollaborateurCompleted" >
                       {{collaborateur.nom}}
                   </div>
@@ -773,7 +773,7 @@
           <td mat-cell *matCellDef="let element" class="vueListeTd">
             <mat-select placeholder={{element.collaborateurs[0].nom}} panelClass="collabSelect">
               <ng-container *ngFor="let collaborateur of element.collaborateurs">
-                <mat-option [ngSwitch]="collaborateur.acces">
+                <mat-option [ngSwitch]="collaborateur.acces" class="collabOption">
                   <div *ngSwitchCase="'COMPLETED'" class="selectCollaborateurCompleted" >
                       {{collaborateur.nom}}
                   </div>
