--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -84,7 +84,7 @@
                       {{card.nomFormulaire}}
                   </span>
                   <span id="card-dateAndAuthor">
-                      Créé le: {{card.creeLe|date:'dd/MM/yyyy HH:mm'}}
+                      Créé le: {{card.creeLe|date:'dd-MM-yyyy à HH:mm'}}
                   </span> <br>
                   
                   <span id="carte-date-auteur">
@@ -241,7 +241,7 @@
                       {{card.nomFormulaire}}
                   </span>
                   <span id="card-dateAndAuthor">
-                      Créé le: {{card.creeLe|date:'dd/MM/yyyy HH:mm'}}
+                      Créé le: {{card.creeLe|date:'dd-MM-yyyy à HH:mm'}}
                   </span> <br>
                   
                   <span id="carte-date-auteur">
@@ -396,7 +396,7 @@
                       {{card.nomFormulaire}}
                   </span>
                   <span id="card-dateAndAuthor">
-                      Créé le: {{card.creeLe|date:'dd/MM/yyyy HH:mm'}}
+                      Créé le: {{card.creeLe|date:'dd-MM-yyyy à HH:mm'}}
                   </span> <br>
                   
                   <span id="carte-date-auteur">
@@ -586,11 +586,11 @@
           </ng-container>
           <ng-container matColumnDef="modifieLe">
             <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Dernière modification </th>
-            <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.modifieLe|date:'dd/MM/yyyy HH:mm'}} </td>
+            <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.modifieLe|date:'dd-MM-yyyy à HH:mm'}} </td>
           </ng-container>
           <ng-container matColumnDef="creeLe">
             <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Date de création </th>
-            <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.creeLe|date:'dd/MM/yyyy HH:mm'}} </td>
+            <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.creeLe|date:'dd-MM-yyyy à HH:mm'}} </td>
           </ng-container>
           <ng-container matColumnDef="modifier">
               <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Action </th>
@@ -697,11 +697,11 @@
         </ng-container>
         <ng-container matColumnDef="modifieLe">
           <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Dernière modification </th>
-          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.modifieLe|date:'dd/MM/yyyy HH:mm'}} </td>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.modifieLe|date:'dd-MM-yyyy à HH:mm'}} </td>
         </ng-container>
         <ng-container matColumnDef="creeLe">
           <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Date de création </th>
-          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.creeLe|date:'dd/MM/yyyy HH:mm'}} </td>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.creeLe|date:'dd-MM-yyyy à HH:mm'}} </td>
         </ng-container>
         <ng-container matColumnDef="modifier">
             <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Action </th>
@@ -801,11 +801,11 @@
         </ng-container>
         <ng-container matColumnDef="modifieLe">
           <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Dernière modification </th>
-          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.modifieLe|date:'dd/MM/yyyy HH:mm'}} </td>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.modifieLe|date:'dd-MM-yyyy à HH:mm'}} </td>
         </ng-container>
         <ng-container matColumnDef="creeLe">
           <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Date de création </th>
-          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.creeLe|date:'dd/MM/yyyy HH:mm'}} </td>
+          <td mat-cell *matCellDef="let element" class="vueListeTd"> {{element.creeLe|date:'dd-MM-yyyy à HH:mm'}} </td>
         </ng-container>
         <ng-container matColumnDef="modifier">
             <th mat-header-cell *matHeaderCellDef class="vueListeTh"> Action </th>
