#40 date à vide lors d'aperçu
On ne doit pas créé une nouvelle date à partir du champ si le champ est vide

--- a/client/src/app/templates/voyage-form/voyage-form.component.html
+++ b/client/src/app/templates/voyage-form/voyage-form.component.html
@@ -83,14 +83,14 @@
                 </td>
                 <td id="du">
                     <mat-form-field>
-                        <input #DateDu matInput [matDatepicker]="pickerDU" placeholder="DU" (click)="pickerDU.open()" [ngModel]="endroit_deplacement.du" (ngModelChange)="duChange($event)">
+                        <input matInput [matDatepicker]="pickerDU" placeholder="DU" (click)="pickerDU.open()" [ngModel]="endroit_deplacement.du" (ngModelChange)="duChange($event)">
                         <mat-datepicker-toggle matSuffix [for]="pickerDU"></mat-datepicker-toggle>
                         <mat-datepicker #pickerDU></mat-datepicker>
                     </mat-form-field>
                 </td>
                 <td id="au">
                     <mat-form-field>
-                        <input #DateAu matInput [matDatepicker]="pickerAU" placeholder="AU" (click)="pickerAU.open()" [ngModel]="endroit_deplacement.au" (ngModelChange)="auChange($event)">
+                        <input matInput [matDatepicker]="pickerAU" placeholder="AU" (click)="pickerAU.open()" [ngModel]="endroit_deplacement.au" (ngModelChange)="auChange($event)">
                         <mat-datepicker-toggle matSuffix [for]="pickerAU"></mat-datepicker-toggle>
                         <mat-datepicker #pickerAU></mat-datepicker>
                     </mat-form-field>
