--- a/client/src/app/edition/edition.component.html
+++ b/client/src/app/edition/edition.component.html
@@ -8,8 +8,8 @@
           <h4>Auteur: {{metadata.auteur.nom}}</h4>
         </div>
         <div class="flex-column">
-          <h4>Créé le: {{metadata.creeLe | date:"dd-MM-yyyy à hh:mm"}}</h4>
-          <h4>Dernière Modification: {{metadata.modifieLe | date:"dd-MM-yyyy à hh:mm"}} </h4>
+          <h4>Créé le: {{metadata.creeLe | date:"dd-MM-yyyy à HH:mm"}}</h4>
+          <h4>Dernière Modification: {{metadata.modifieLe | date:"dd-MM-yyyy à HH:mm"}} </h4>
         </div>
       </div>
       <ng-template formhost></ng-template>
