--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -129,9 +129,9 @@
 .canceled.mat-progress-bar,
 .completed.mat-progress-bar,
 .archived.mat-progress-bar {
-  margin: 5px;
+  height: 24px;
+  padding-left: 3px;
   width: 230px;
-  height: 20px;
 }
 
 .inProgress .mat-progress-bar-buffer,
@@ -160,6 +160,7 @@
 #collaborateursList {
   border: 1px solid black;
   border-bottom: none;
+  margin-bottom: 15px;
 }
 #collaborateursList td.mat-cell { /* necessary, too delete unwanted border under text */
   border-bottom: none;
