--- a/client/src/app/edition/edition.component.html
+++ b/client/src/app/edition/edition.component.html
@@ -46,7 +46,7 @@
         <button id="copier" mat-raised-button (click)="onCopy()">COPIER</button>
       </mat-grid-tile>
       <mat-grid-tile *ngIf="canCancel">
-        <button id="copier" mat-raised-button color="warn" (click)="onCancel()">INVALIDER</button>
+        <button id="invalider" mat-raised-button color="warn" (click)="onCancel()">INVALIDER</button>
       </mat-grid-tile>
     </mat-grid-list>
     </div>
