--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -96,6 +96,11 @@
 .cardHeader {
   padding: 0 15px !important;
 }
+.cardHeader .mat-expansion-indicator::after {
+  border-width: 0 4px 4px 0 !important;
+  margin-top: -10px !important;
+  padding: 4px !important;
+}
 
 #completedIcon {
   color: #8cc83c;
