--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -97,8 +97,9 @@
   padding: 0 15px !important;
 }
 
+
 #completedIcon {
-  color: #8cc83c;
+  color: #5e9e04;
 }
 #archivedIcon {
   color: #41aae6;
