--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -53,10 +53,10 @@
     </div>
 
     <button mat-icon-button (click)="search()">
-      <i class="material-icons" id="searchIcon">search</i>
+      <i class="material-icons">search</i>
     </button>
     <button mat-icon-button (click)="desactivateSearch()">
-      <i class="material-icons" id="clearSearchIcon">backspace</i>
+      <i class="material-icons">backspace</i>
     </button>
   </div>
 </mat-toolbar>
